--- a/machine_app/requirements.txt
+++ b/machine_app/requirements.txt
@@ -1,7 +1,6 @@
 # REST API Generation
 fastapi~=0.114
 hypercorn~=0.17
-#uvicorn==0.23.2
 pydantic~=2.9
 SQLAlchemy~=2.0
 aiosqlite~=0.20
@@ -9,4 +8,4 @@ coloredlogs~=15.0
 PyYAML~=6.0
 pika==1.3.2
 ssl
-..Chassis/dist/microservice_chassis-0.1.3-py3-none-any.whl
+microservice_chassis
