--- a/machine_app/Dockerfile
+++ b/machine_app/Dockerfile
@@ -1,10 +1,14 @@
 FROM python:3.12-slim-bookworm
 
-# Set working directory
 WORKDIR /home/pyuser/code
 
-# Copy requirements and install globally
-COPY requirements.txt .
+# Copy wheel into the container
+COPY Chassis/dist/microservice_chassis-0.3.0-py3-none-any.whl ./Chassis/dist/
+
+# Copy requirements
+COPY Machine/machine_app/requirements.txt .
+
+# Install dependencies
 RUN pip install --no-cache-dir --upgrade pip && \
     pip install --no-cache-dir -r requirements.txt
 
@@ -13,12 +17,11 @@ RUN useradd -u 1000 -m pyuser && \
     chown -R pyuser:pyuser /home/pyuser
 
 # Copy entrypoint and app
-COPY entrypoint.sh .
+COPY Machine/machine_app/entrypoint.sh .
 RUN chmod +x entrypoint.sh
-COPY app ./app
+COPY Machine/machine_app/app ./app
 
 # Switch to non-root user
 USER pyuser
 
-# Entrypoint
 ENTRYPOINT ["./entrypoint.sh"]
