--- a/machine_app/requirements.txt
+++ b/machine_app/requirements.txt
@@ -7,5 +7,4 @@ aiosqlite~=0.20
 coloredlogs~=15.0
 PyYAML~=6.0
 pika==1.3.2
-ssl
-microservice_chassis
+./Chassis/dist/microservice_chassis-0.3.0-py3-none-any.whl
