Restructure app for pyproject + fix various bugs + update to new chassis

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,14 +1,34 @@
 services:
-  monolithicapp:
-    build: machine_app
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER:-guest}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWD:-guest}
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "status"]
+      interval: 5s
+      timeout: 10s
+      retries: 5
+      start_period: 10s
+  machine:
+    build: .
     ports:
       - '13000:8000'
       - '13443:8443'
     volumes:
-      #- './fastapi_app:/home/pyuser/code'
-      - './db_volume:/volume'
+      - machine-db:/database
     environment:
       PYTHONUNBUFFERED: 1
       SQLALCHEMY_DATABASE_URL: ${SQLALCHEMY_SQLITE_DATABASE_URI}
+      RABBITMQ_HOST: ${RABBITMQ_HOST}
     restart: on-failure
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
 
+volumes:
+  machine-db:
