--- a/.env
+++ b/.env
@@ -1,9 +1,5 @@
-
-# Nombre del proyecto para Docker Compose
-COMPOSE_PROJECT_NAME=machine_service
-
-# Cadena de conexión a la base de datos (SQLite en volumen Docker)
-SQLALCHEMY_SQLITE_DATABASE_URI=sqlite+aiosqlite:////volume/machines.db
-
-# Versión de la aplicación
-APP_VERSION=1.0.1
+COMPOSE_PROJECT_NAME=machine
+SQLALCHEMY_SQLITE_DATABASE_URI=sqlite+aiosqlite:////database/machine.db
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_USER=guest
+RABBITMQ_PASSWD=guest
