--- a/src/machine/logging.ini
+++ b/src/machine/logging.ini
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,app
+keys=root,machine
 
 [handlers]
 keys=console
@@ -11,11 +11,11 @@ keys=brief,standard,colored
 level=INFO
 handlers=console
 
-[logger_app]
+[logger_machine]
 level=DEBUG
 handlers=console
 propagate=0
-qualname=app
+qualname=machine
 
 [handler_console]
 class=StreamHandler
