--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ SQLALCHEMY_SQLITE_DATABASE_URI=sqlite+aiosqlite:////database/machine.db
 RABBITMQ_HOST=rabbitmq
 RABBITMQ_USER=guest
 RABBITMQ_PASSWD=guest
+PORT=8000
+APP_VERSION="2.0.0"
