Initial logger fix

--- a/src/machine/logging.ini
+++ b/src/machine/logging.ini
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,machine
+keys=root,machine,chassis
 
 [handlers]
 keys=console
@@ -16,6 +16,12 @@ level=DEBUG
 handlers=console
 propagate=0
 qualname=machine
+
+[logger_chassis]
+level=DEBUG
+handlers=console
+propagate=0
+qualname=chassis
 
 [handler_console]
 class=StreamHandler
