--- a/src/machine/logging.ini
+++ b/src/machine/logging.ini
@@ -17,11 +17,11 @@ handlers=console
 propagate=0
 qualname=machine
 
-[logger_chassis]
-level=DEBUG
-handlers=console
-propagate=0
-qualname=chassis
+; [logger_chassis]
+; level=DEBUG
+; handlers=console
+; propagate=0
+; qualname=chassis
 
 [handler_console]
 class=StreamHandler
